--- a/FoodPiper/ViewIndividualRestaurant.xib
+++ b/FoodPiper/ViewIndividualRestaurant.xib
@@ -326,6 +326,9 @@
                             <state key="normal" title="AllPeeps">
                                 <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="viewPipesForRestaurant:" destination="-1" eventType="touchUpInside" id="pUi-nI-Iuk"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIm-fg-qe7" customClass="SendMessageIcon" customModule="FoodPiper" customModuleProvider="target">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -514,60 +517,6 @@
                             <exclude reference="19g-5I-9rf"/>
                             <exclude reference="A4Q-Cj-QHi"/>
                             <exclude reference="XYa-Ms-oxP"/>
-                            <exclude reference="LCT-OO-Nhk"/>
-                            <exclude reference="R7J-py-nSm"/>
-                            <exclude reference="VsO-98-cgd"/>
-                            <exclude reference="sdh-Yg-7tL"/>
-                            <exclude reference="8jZ-XP-DrM"/>
-                            <exclude reference="LgR-o7-zr9"/>
-                            <exclude reference="XnB-Xd-xMX"/>
-                            <exclude reference="p6d-rm-Ez0"/>
-                            <exclude reference="6Og-uv-5e5"/>
-                            <exclude reference="88D-bh-pLo"/>
-                            <exclude reference="MWI-Zw-HQb"/>
-                            <exclude reference="euE-km-sw2"/>
-                            <exclude reference="Uey-rn-NfV"/>
-                            <exclude reference="Usg-6G-pdg"/>
-                            <exclude reference="bM1-T3-idp"/>
-                            <exclude reference="0zM-hw-N3h"/>
-                            <exclude reference="2AD-NV-gAE"/>
-                            <exclude reference="EL2-Gu-FbX"/>
-                            <exclude reference="TDB-u3-guq"/>
-                            <exclude reference="zZb-R3-PF2"/>
-                            <exclude reference="9X1-vg-Zu2"/>
-                            <exclude reference="X9I-Qn-lsM"/>
-                            <exclude reference="Y7x-QN-f0r"/>
-                            <exclude reference="YvN-dw-8dn"/>
-                            <exclude reference="ibt-W3-iTm"/>
-                            <exclude reference="er3-3x-re9"/>
-                            <exclude reference="hjD-C4-jwW"/>
-                            <exclude reference="wxp-SL-EpU"/>
-                            <exclude reference="yEe-be-Uhe"/>
-                            <exclude reference="2xV-qC-ggf"/>
-                            <exclude reference="EZg-Om-doS"/>
-                            <exclude reference="Jca-yH-DC5"/>
-                            <exclude reference="f68-R9-yXS"/>
-                            <exclude reference="lh8-MT-awA"/>
-                            <exclude reference="ykZ-EX-8Xz"/>
-                            <exclude reference="JtW-JZ-LE2"/>
-                            <exclude reference="boe-NO-b5x"/>
-                            <exclude reference="uQO-oq-IjU"/>
-                            <exclude reference="vY1-at-wuT"/>
-                            <exclude reference="0nv-aY-ghD"/>
-                            <exclude reference="n5E-bH-0t1"/>
-                            <exclude reference="tpL-ln-owP"/>
-                            <exclude reference="GEh-YM-h5i"/>
-                            <exclude reference="eY6-LV-kAt"/>
-                            <exclude reference="BS5-U6-gDW"/>
-                            <exclude reference="Fmn-vY-6wK"/>
-                            <exclude reference="JRR-3K-9Xi"/>
-                            <exclude reference="LzU-sd-d7c"/>
-                            <exclude reference="SxR-1h-jnZ"/>
-                            <exclude reference="dmi-wt-nbO"/>
-                            <exclude reference="P1w-u4-8R6"/>
-                            <exclude reference="a5Z-g3-nYc"/>
-                            <exclude reference="g6z-aU-OKQ"/>
-                            <exclude reference="rI3-X2-eyJ"/>
                             <exclude reference="1an-TZ-Qwn"/>
                             <exclude reference="RwL-cU-JDL"/>
                             <exclude reference="YO5-9u-cme"/>
@@ -583,12 +532,66 @@
                             <exclude reference="Whd-CN-pcL"/>
                             <exclude reference="sqg-qr-5ad"/>
                             <exclude reference="yYI-gS-UPr"/>
+                            <exclude reference="P1w-u4-8R6"/>
+                            <exclude reference="a5Z-g3-nYc"/>
+                            <exclude reference="g6z-aU-OKQ"/>
+                            <exclude reference="rI3-X2-eyJ"/>
                             <exclude reference="1K3-a7-qNy"/>
                             <exclude reference="2mq-Q0-etZ"/>
                             <exclude reference="BUg-Ky-00o"/>
                             <exclude reference="V2h-E7-j8k"/>
                             <exclude reference="ll5-pu-n88"/>
                             <exclude reference="mR6-KY-FzL"/>
+                            <exclude reference="LCT-OO-Nhk"/>
+                            <exclude reference="R7J-py-nSm"/>
+                            <exclude reference="VsO-98-cgd"/>
+                            <exclude reference="sdh-Yg-7tL"/>
+                            <exclude reference="8jZ-XP-DrM"/>
+                            <exclude reference="LgR-o7-zr9"/>
+                            <exclude reference="XnB-Xd-xMX"/>
+                            <exclude reference="p6d-rm-Ez0"/>
+                            <exclude reference="0nv-aY-ghD"/>
+                            <exclude reference="n5E-bH-0t1"/>
+                            <exclude reference="tpL-ln-owP"/>
+                            <exclude reference="6Og-uv-5e5"/>
+                            <exclude reference="88D-bh-pLo"/>
+                            <exclude reference="MWI-Zw-HQb"/>
+                            <exclude reference="euE-km-sw2"/>
+                            <exclude reference="Uey-rn-NfV"/>
+                            <exclude reference="Usg-6G-pdg"/>
+                            <exclude reference="bM1-T3-idp"/>
+                            <exclude reference="er3-3x-re9"/>
+                            <exclude reference="hjD-C4-jwW"/>
+                            <exclude reference="wxp-SL-EpU"/>
+                            <exclude reference="yEe-be-Uhe"/>
+                            <exclude reference="BS5-U6-gDW"/>
+                            <exclude reference="Fmn-vY-6wK"/>
+                            <exclude reference="JRR-3K-9Xi"/>
+                            <exclude reference="LzU-sd-d7c"/>
+                            <exclude reference="SxR-1h-jnZ"/>
+                            <exclude reference="dmi-wt-nbO"/>
+                            <exclude reference="9X1-vg-Zu2"/>
+                            <exclude reference="X9I-Qn-lsM"/>
+                            <exclude reference="Y7x-QN-f0r"/>
+                            <exclude reference="YvN-dw-8dn"/>
+                            <exclude reference="ibt-W3-iTm"/>
+                            <exclude reference="JtW-JZ-LE2"/>
+                            <exclude reference="boe-NO-b5x"/>
+                            <exclude reference="uQO-oq-IjU"/>
+                            <exclude reference="vY1-at-wuT"/>
+                            <exclude reference="2xV-qC-ggf"/>
+                            <exclude reference="EZg-Om-doS"/>
+                            <exclude reference="Jca-yH-DC5"/>
+                            <exclude reference="f68-R9-yXS"/>
+                            <exclude reference="lh8-MT-awA"/>
+                            <exclude reference="ykZ-EX-8Xz"/>
+                            <exclude reference="GEh-YM-h5i"/>
+                            <exclude reference="eY6-LV-kAt"/>
+                            <exclude reference="0zM-hw-N3h"/>
+                            <exclude reference="2AD-NV-gAE"/>
+                            <exclude reference="EL2-Gu-FbX"/>
+                            <exclude reference="TDB-u3-guq"/>
+                            <exclude reference="zZb-R3-PF2"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -614,60 +617,6 @@
                             <exclude reference="19g-5I-9rf"/>
                             <exclude reference="A4Q-Cj-QHi"/>
                             <exclude reference="XYa-Ms-oxP"/>
-                            <include reference="LCT-OO-Nhk"/>
-                            <exclude reference="R7J-py-nSm"/>
-                            <include reference="VsO-98-cgd"/>
-                            <exclude reference="sdh-Yg-7tL"/>
-                            <include reference="8jZ-XP-DrM"/>
-                            <exclude reference="LgR-o7-zr9"/>
-                            <include reference="XnB-Xd-xMX"/>
-                            <include reference="p6d-rm-Ez0"/>
-                            <include reference="6Og-uv-5e5"/>
-                            <exclude reference="88D-bh-pLo"/>
-                            <include reference="MWI-Zw-HQb"/>
-                            <include reference="euE-km-sw2"/>
-                            <include reference="Uey-rn-NfV"/>
-                            <include reference="Usg-6G-pdg"/>
-                            <exclude reference="bM1-T3-idp"/>
-                            <include reference="0zM-hw-N3h"/>
-                            <exclude reference="2AD-NV-gAE"/>
-                            <include reference="EL2-Gu-FbX"/>
-                            <include reference="TDB-u3-guq"/>
-                            <include reference="zZb-R3-PF2"/>
-                            <include reference="9X1-vg-Zu2"/>
-                            <include reference="X9I-Qn-lsM"/>
-                            <include reference="Y7x-QN-f0r"/>
-                            <exclude reference="YvN-dw-8dn"/>
-                            <exclude reference="ibt-W3-iTm"/>
-                            <exclude reference="er3-3x-re9"/>
-                            <include reference="hjD-C4-jwW"/>
-                            <include reference="wxp-SL-EpU"/>
-                            <include reference="yEe-be-Uhe"/>
-                            <include reference="2xV-qC-ggf"/>
-                            <include reference="EZg-Om-doS"/>
-                            <include reference="Jca-yH-DC5"/>
-                            <include reference="f68-R9-yXS"/>
-                            <include reference="lh8-MT-awA"/>
-                            <include reference="ykZ-EX-8Xz"/>
-                            <include reference="JtW-JZ-LE2"/>
-                            <include reference="boe-NO-b5x"/>
-                            <include reference="uQO-oq-IjU"/>
-                            <include reference="vY1-at-wuT"/>
-                            <include reference="0nv-aY-ghD"/>
-                            <include reference="n5E-bH-0t1"/>
-                            <include reference="tpL-ln-owP"/>
-                            <include reference="GEh-YM-h5i"/>
-                            <include reference="eY6-LV-kAt"/>
-                            <include reference="BS5-U6-gDW"/>
-                            <include reference="Fmn-vY-6wK"/>
-                            <exclude reference="JRR-3K-9Xi"/>
-                            <exclude reference="LzU-sd-d7c"/>
-                            <include reference="SxR-1h-jnZ"/>
-                            <exclude reference="dmi-wt-nbO"/>
-                            <include reference="P1w-u4-8R6"/>
-                            <include reference="a5Z-g3-nYc"/>
-                            <exclude reference="g6z-aU-OKQ"/>
-                            <exclude reference="rI3-X2-eyJ"/>
                             <include reference="1an-TZ-Qwn"/>
                             <include reference="RwL-cU-JDL"/>
                             <include reference="YO5-9u-cme"/>
@@ -683,12 +632,66 @@
                             <include reference="Whd-CN-pcL"/>
                             <include reference="sqg-qr-5ad"/>
                             <include reference="yYI-gS-UPr"/>
+                            <include reference="P1w-u4-8R6"/>
+                            <include reference="a5Z-g3-nYc"/>
+                            <exclude reference="g6z-aU-OKQ"/>
+                            <exclude reference="rI3-X2-eyJ"/>
                             <include reference="1K3-a7-qNy"/>
                             <include reference="2mq-Q0-etZ"/>
                             <include reference="BUg-Ky-00o"/>
                             <exclude reference="V2h-E7-j8k"/>
                             <include reference="ll5-pu-n88"/>
                             <exclude reference="mR6-KY-FzL"/>
+                            <include reference="LCT-OO-Nhk"/>
+                            <exclude reference="R7J-py-nSm"/>
+                            <include reference="VsO-98-cgd"/>
+                            <exclude reference="sdh-Yg-7tL"/>
+                            <include reference="8jZ-XP-DrM"/>
+                            <exclude reference="LgR-o7-zr9"/>
+                            <include reference="XnB-Xd-xMX"/>
+                            <include reference="p6d-rm-Ez0"/>
+                            <include reference="0nv-aY-ghD"/>
+                            <include reference="n5E-bH-0t1"/>
+                            <include reference="tpL-ln-owP"/>
+                            <include reference="6Og-uv-5e5"/>
+                            <exclude reference="88D-bh-pLo"/>
+                            <include reference="MWI-Zw-HQb"/>
+                            <include reference="euE-km-sw2"/>
+                            <include reference="Uey-rn-NfV"/>
+                            <include reference="Usg-6G-pdg"/>
+                            <exclude reference="bM1-T3-idp"/>
+                            <exclude reference="er3-3x-re9"/>
+                            <include reference="hjD-C4-jwW"/>
+                            <include reference="wxp-SL-EpU"/>
+                            <include reference="yEe-be-Uhe"/>
+                            <include reference="BS5-U6-gDW"/>
+                            <include reference="Fmn-vY-6wK"/>
+                            <exclude reference="JRR-3K-9Xi"/>
+                            <exclude reference="LzU-sd-d7c"/>
+                            <include reference="SxR-1h-jnZ"/>
+                            <exclude reference="dmi-wt-nbO"/>
+                            <include reference="9X1-vg-Zu2"/>
+                            <include reference="X9I-Qn-lsM"/>
+                            <include reference="Y7x-QN-f0r"/>
+                            <exclude reference="YvN-dw-8dn"/>
+                            <exclude reference="ibt-W3-iTm"/>
+                            <include reference="JtW-JZ-LE2"/>
+                            <include reference="boe-NO-b5x"/>
+                            <include reference="uQO-oq-IjU"/>
+                            <include reference="vY1-at-wuT"/>
+                            <include reference="2xV-qC-ggf"/>
+                            <include reference="EZg-Om-doS"/>
+                            <include reference="Jca-yH-DC5"/>
+                            <include reference="f68-R9-yXS"/>
+                            <include reference="lh8-MT-awA"/>
+                            <include reference="ykZ-EX-8Xz"/>
+                            <include reference="GEh-YM-h5i"/>
+                            <include reference="eY6-LV-kAt"/>
+                            <include reference="0zM-hw-N3h"/>
+                            <exclude reference="2AD-NV-gAE"/>
+                            <include reference="EL2-Gu-FbX"/>
+                            <include reference="TDB-u3-guq"/>
+                            <include reference="zZb-R3-PF2"/>
                         </mask>
                     </variation>
                 </view>
